@@ -1237,3 +1237,8 @@
 2013-04-10  Jaehwan Kim
 
         * Fix the region_show/region_bring_in don't have a limit at a paging movement.
+
+2013-04-10  Jaehwan Kim
+
+        * Add the API elm_scroller_single_direction_set/get.
+        This sets how the content is scrolled.
